--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
 		"superjson": "^2.2.0",
 		"tailwind-merge": "^2.0.0",
 		"tailwindcss-animate": "^1.0.7",
+		"uuid": "^9.0.1",
 		"zod": "^3.22.3"
 	},
 	"devDependencies": {
@@ -63,6 +64,7 @@
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"@types/react-syntax-highlighter": "^15.5.10",
+		"@types/uuid": "^9.0.7",
 		"autoprefixer": "^10.0.1",
 		"eslint": "^8",
 		"eslint-config-next": "14.0.1",
